--- a/src/components/5e/Creature.astro
+++ b/src/components/5e/Creature.astro
@@ -121,15 +121,15 @@ const size = DND_SIZES[data.size];
 
 	<div class="text-sm sm:text-base">
 		<div>
-			<span class="text-sm font-medium uppercase text-white">Класс зашиты</span>
+			<span class="text-sm font-medium uppercase text-white">Класс зашиты:</span>
 			<span>{data.ac.value} ({data.ac.type})</span>
 		</div>
 		<div>
-			<span class="font-semmediumibold text-sm uppercase text-white">Хиты</span>
+			<span class="font-semmediumibold text-sm uppercase text-white">Хиты:</span>
 			<span>{data.hp.value} [{data.hp.max}] ({data.hp.formula})</span>
 		</div>
 		<div>
-			<span class="text-sm font-medium uppercase text-white">Скорость</span>
+			<span class="text-sm font-medium uppercase text-white">Скорость:</span>
 			<span>{formattedSpeed}</span>
 		</div>
 	</div>
@@ -153,7 +153,7 @@ const size = DND_SIZES[data.size];
 		{
 			data.dv && (
 				<div>
-					<span class="text-sm font-medium uppercase text-white">Уязвимость к урону</span>
+					<span class="text-sm font-medium uppercase text-white">Уязвимость к урону:</span>
 					<span>{data.dv}</span>
 				</div>
 			)
@@ -161,7 +161,7 @@ const size = DND_SIZES[data.size];
 		{
 			data.dr && (
 				<div>
-					<span class="text-sm font-medium uppercase text-white">Устойчивость к урону</span>
+					<span class="text-sm font-medium uppercase text-white">Устойчивость к урону:</span>
 					<span>{data.dr}</span>
 				</div>
 			)
@@ -169,7 +169,7 @@ const size = DND_SIZES[data.size];
 		{
 			data.di && (
 				<div>
-					<span class="text-sm font-medium uppercase text-white">Иммунитет к урону</span>
+					<span class="text-sm font-medium uppercase text-white">Невосприимчивость к урону:</span>
 					<span>{data.di}</span>
 				</div>
 			)
@@ -178,25 +178,25 @@ const size = DND_SIZES[data.size];
 			data.dc && (
 				<div>
 					<span class="text-sm font-medium uppercase text-white">
-						Иммунитет к состояниям
+						Невосприимчивость к состояниям:
 					</span>
 					<span>{data.dc}</span>
 				</div>
 			)
 		}
 		<div>
-			<span class="text-sm font-medium uppercase text-white">Чувства</span>
+			<span class="text-sm font-medium uppercase text-white">Чувства:</span>
 			<span>пассивное {data.senses.perception}</span>
 		</div>
 		<div>
-			<span class="text-sm font-medium uppercase text-white">Языки</span>
+			<span class="text-sm font-medium uppercase text-white">Языки:</span>
 			<span>{data.languages}</span>
 		</div>
 		<div>
-			<span class="text-sm font-medium uppercase text-white">Опасность</span>
+			<span class="text-sm font-medium uppercase text-white">Опасность:</span>
 			<span>{data.cr}</span>
 
-			<span class="font-semimediumbold ml-4 text-sm uppercase text-white">Бонус владения</span>
+			<span class="font-semimediumbold ml-4 text-sm uppercase text-white">Бонус владения:</span>
 			<span>+{proficiency(data.cr)}</span>
 		</div>
 	</div>
