--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ const today = new Date();
 <footer class="mb-6 mt-10 text-center">
 	<div>
 		<span class="text-sm font-medium uppercase text-brand-gold"
-			>&copy; {today.getFullYear()} Киборги и Чародеи, 2016</span
+			>&copy; {today.getFullYear()} Киборги и Чародеи</span
 		>
 	</div>
 
