Chore: Update deps & Format

--- a/src/components/5e/Creature.astro
+++ b/src/components/5e/Creature.astro
@@ -177,9 +177,7 @@ const size = DND_SIZES[data.size];
 		{
 			data.dc && (
 				<div>
-					<span class="text-sm font-medium uppercase text-white">
-						Иммунитет к состояниям
-					</span>
+					<span class="text-sm font-medium uppercase text-white">Иммунитет к состояниям</span>
 					<span>{data.dc}</span>
 				</div>
 			)
