Fix copyright year in Footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,10 +2,10 @@
 const today = new Date();
 ---
 
-<footer class="mb-6 mt-10 text-center">
+<footer class="mb-6 mt-10 text-center sm:mt-16">
 	<div>
 		<span class="text-sm font-medium uppercase text-brand-gold"
-			>&copy; {today.getFullYear()} Киборги и Чародеи, 2016</span
+			>&copy; 2016-{today.getFullYear()} Киборги и Чародеи</span
 		>
 	</div>
 
