--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -39,6 +39,8 @@ const { title, description, date, cover, author, translator, headings, links } =
 			<p class="lead pb-4">{description}</p>
 
 			<slot />
+		<hr />
+			<p>Если вам понравилась эта статья или у вас есть к ней комментарии, то напишите их в нашем <a href="https://t.me/cyborgs_and_mages" target="_blank">телеграмм канале</a> или на нашем <a href="https://discord.gg/yrJqvCqU3w" target="_blank">дискорд сервере</a> </p>
 		</div>
 	</article>
 </BaseLayout>
