Translated RSS feed

--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -40,7 +40,7 @@ const { title, description, date, cover, author, translator, headings, links } =
 
 			<slot />
 		<hr />
-			<p>Если вам понравилась эта статья или у вас есть к ней комментарии, то напишите их в нашем <a href="https://t.me/cyborgs_and_mages" target="_blank">телеграмм канале</a> или на нашем <a href="https://discord.gg/yrJqvCqU3w" target="_blank">дискорд сервере</a> </p>
+			<p>Если вам понравилась эта статья или у вас есть к ней комментарии, то напишите их в нашем <a href="https://t.me/cyborgs_and_mages" target="_blank">канале в Telegram</a> или на нашем <a href="https://discord.gg/yrJqvCqU3w" target="_blank">сервере в Discord</a> </p>
 		</div>
 	</article>
 </BaseLayout>
