--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -1,21 +1,24 @@
 ---
-import { Image } from 'astro:assets';
-import type { CollectionEntry } from 'astro:content';
-import FormattedDate from '~components/FormattedDate.astro';
-import BaseLayout from '~layouts/BaseLayout.astro';
+import { Image } from "astro:assets";
+import type { CollectionEntry } from "astro:content";
+import FormattedDate from "~components/FormattedDate.astro";
+import BaseLayout from "~layouts/BaseLayout.astro";
 
-type Props = CollectionEntry<'posts'>['data'];
+type Props = CollectionEntry<"posts">["data"];
 
-const { title, description, date, cover, author, translator, headings, links } = Astro.props;
+const { title, description, date, cover, author, translator, tags, headings, links } =
+	Astro.props;
 ---
 
 <BaseLayout {title} {description} {headings} {links}>
-	<article class="prose my-8 w-full max-w-4xl px-2 font-serif sm:prose-lg lg:prose-xl sm:px-0">
+	<article
+		class="prose my-8 w-full max-w-4xl px-2 font-serif sm:prose-lg lg:prose-xl sm:px-0"
+	>
 		{
 			cover && (
 				<Image
 					width={1024}
-					format={'webp'}
+					format={"webp"}
 					src={cover}
 					alt={title}
 					class="aspect-video h-auto w-full rounded-md object-cover object-center"
@@ -33,14 +36,28 @@ const { title, description, date, cover, author, translator, headings, links } =
 				)
 			}
 			<div><FormattedDate date={date} /></div>
+
+			<div>
+				{tags.map((tag) => <a href=`/tags/${tag}` class="tag">{tag}</a>)}
+			</div>
 		</div>
 
 		<div>
-			<p class="lead pb-4">{description}</p>
+			<!-- <p class="lead pb-4">{description}</p> -->
+
+			<hr />
 
 			<slot />
-		<hr />
-			<p>Если вам понравилась эта статья или у вас есть к ней комментарии, то напишите их в нашем <a href="https://t.me/cyborgs_and_mages" target="_blank">канале в Telegram</a> или на нашем <a href="https://discord.gg/yrJqvCqU3w" target="_blank">сервере в Discord</a> </p>
+			<hr />
+			<p>
+				Если вам понравилась эта статья или у вас есть к ней комментарии, то
+				напишите их в нашем <a
+					href="https://t.me/cyborgs_and_mages"
+					target="_blank">канале в Telegram</a
+				> или на нашем <a href="https://discord.gg/yrJqvCqU3w" target="_blank"
+					>сервере в Discord</a
+				>.
+			</p>
 		</div>
 	</article>
 </BaseLayout>
