--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -37,6 +37,10 @@ const { post } = Astro.props;
 		<a href={`/posts/${post.slug}`} class="no-underline"><h2 class="!my-1">{post.data.title}</h2></a>
 		<span class="font-sans text-base text-brand-gold">{post.data.author}, <FormattedDate date={post.data.date} /></span>
 
+		<div class="not-prose flex flex-wrap">
+			{post.data.tags.sort().map((tag) => <a href=`/tags/${tag}` class="tag">{tag}</a>)}
+		</div>
+
 		<p>
 			{post.data.description}
 			<a href={`/posts/${post.slug}`}>Читать...</a>
