--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -37,7 +37,7 @@ const { title, description, date, cover, author, translator, tags, headings, lin
 			}
 			<div><FormattedDate date={date} /></div>
 
-			<div>
+			<div class="not-prose flex flex-wrap">
 				{tags.sort().map((tag) => <a href=`/tags/${tag}` class="tag">{tag}</a>)}
 			</div>
 		</div>
