--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -1,8 +1,11 @@
 ---
+import type { CollectionEntry } from 'astro:content';
 import { Image } from "astro:assets";
 import FormattedDate from "~components/FormattedDate.astro";
 import Share from "~components/Share.astro"
 import BaseLayout from "~layouts/BaseLayout.astro";
+
+type Props = CollectionEntry<"posts">;
 
 const { data, headings, slug } = Astro.props;
 
@@ -49,17 +52,16 @@ const { title, description, date, cover, author, translator, tags, links } = dat
 			<slot />
 			<hr />
 			<p>
-				Если вам понравилась эта статья или у вас есть к ней комментарии, то
-				напишите их в нашем <a
+				Если вам понравилась эта статья или у вас есть комментарии, присоединяйтесь к дискуссии <a
 					href="https://t.me/cyborgs_and_mages"
-					target="_blank">канале в Telegram</a
-				> или на нашем <a href="https://discord.gg/yrJqvCqU3w" target="_blank"
+					target="_blank">в канале Telegram</a
+				> или <a href="https://discord.gg/yrJqvCqU3w" target="_blank"
 					>сервере в Discord</a
 				>.
 			</p>
 
 	
-		   <Share {description} {slug} />  
+		   <Share {title} {description} {slug} {tags} />  
 		</div>
 	</article>
 </BaseLayout>
