--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -5,6 +5,7 @@ import Aside from '~components/Aside.astro';
 import Verse from '~components/Verse.astro';
 import Generator from '~components/Generator.astro';
 import Creature from '~components/5e/Creature.astro';
+import Item from '~components/5e/Item.astro';
 
 export async function getStaticPaths() {
 	const posts = await getCollection('posts');
@@ -22,5 +23,5 @@ const { Content, headings } = await post.render();
 ---
 
 <ArticleLayout {...post} {headings}>
-	<Content components={{ Aside: Aside, Verse: Verse, Creature: Creature, Generator: Generator }} />
+	<Content components={{ Aside: Aside, Verse: Verse, Creature: Creature, Item: Item, Generator: Generator }} />
 </ArticleLayout>
