--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -8,7 +8,10 @@ export async function getStaticPaths() {
 	const uniqueTags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
 
 	return uniqueTags.map((tag) => {
-		const filteredPosts = allPosts.filter((post) => post.data.tags.includes(tag));
+		const filteredPosts = allPosts
+			.filter((post) => post.data.tags.includes(tag))
+			.sort((a, b) => new Date(b.data.date) - new Date(a.data.date));
+
 		return {
 			params: { tag },
 			props: { posts: filteredPosts }
