--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,6 @@
 ---
-import '@fontsource/inter/variable.css';
-import '@fontsource/lora/variable.css';
+import '@fontsource-variable/inter';
+import '@fontsource-variable/lora';
 
 import BaseHead from '~components/BaseHead.astro';
 import Footer from '~components/Footer.astro';
