--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import { inject } from '@vercel/analytics';
 import '@fontsource-variable/inter';
 import '@fontsource-variable/lora';
 
@@ -6,6 +7,8 @@ import BaseHead from '~components/BaseHead.astro';
 import Footer from '~components/Footer.astro';
 import Header from '~components/Header.astro';
 import Sidebar from '~components/Sidebar.astro';
+
+inject();
 
 const { title, description, headings, sidebar = true, links } = Astro.props;
 ---
