--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -6,6 +6,7 @@ import Verse from '~components/Verse.astro';
 import Generator from '~components/Generator.astro';
 import Creature from '~components/5e/Creature.astro';
 import Item from '~components/5e/Item.astro';
+import Link from '~components/Link.astro';
 
 export async function getStaticPaths() {
 	const posts = await getCollection('posts');
@@ -23,5 +24,7 @@ const { Content, headings } = await post.render();
 ---
 
 <ArticleLayout {...post} {headings}>
-	<Content components={{ Aside: Aside, Verse: Verse, Creature: Creature, Item: Item, Generator: Generator }} />
+	<Content
+		components={{ Aside: Aside, Verse: Verse, Link: Link, Creature: Creature, Item: Item, Generator: Generator }}
+	/>
 </ArticleLayout>
