--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -9,7 +9,7 @@ export async function getStaticPaths() {
 
 	return uniqueTags.map((tag) => {
 		const filteredPosts = allPosts
-			.filter((post) => post.data.tags.includes(tag))
+			.filter((post) => post.data.tags.includes(tag) && !post.data.draft)
 			.sort((a, b) => new Date(b.data.date) - new Date(a.data.date));
 
 		return {
