--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,15 +8,24 @@ import { SITE_NAVIGATION, SITE_TITLE } from '../consts';
 	<div class="flex flex-col items-center gap-2 md:flex-row">
 		<a href="/" class="flex flex-1 items-center gap-2">
 			<img src="/images/decoration/logo-small.webp" alt={SITE_TITLE} class="h-14 w-14" />
-			<h2 class="font-serif text-xl font-bold text-brand-ivory sm:text-2xl">
+			<h2 class="font-serif text-lg font-bold text-brand-ivory sm:text-xl">
 				{SITE_TITLE}
-			</h2></a
-		>
+			</h2>
+		</a>
+
 		<Socials />
 	</div>
-	<nav
-		class="mt-4 flex w-full flex-wrap justify-evenly gap-4 bg-brand-mist px-1 py-2 text-sm sm:gap-2 sm:rounded-md sm:px-6 sm:text-base"
-	>
-		{SITE_NAVIGATION.map((item) => <HeaderLink href={item.href}>{item.label}</HeaderLink>)}
+	<nav class="mt-4 hidden w-full flex-wrap justify-evenly gap-4 rounded-md bg-brand-mist px-4 py-2 text-base sm:flex">
+		{SITE_NAVIGATION.flatMap((item) => <HeaderLink href={item.href}>{item.label}</HeaderLink>)}
+	</nav>
+	<nav class="mb-0 mt-4 flex justify-center pb-0 sm:hidden">
+		<details>
+			<summary class="rounded bg-brand-ivory px-4 py-1 text-sm font-medium uppercase text-brand-night"
+				>Навигация</summary
+			>
+			<div class="mt-2 flex flex-col gap-2">
+				{SITE_NAVIGATION.flatMap((item) => <HeaderLink href={item.href}>{item.label}</HeaderLink>)}
+			</div>
+		</details>
 	</nav>
 </header>
