--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -13,7 +13,7 @@ export interface Props {
 const { headings, links } = Astro.props;
 
 const posts = (await getCollection('posts'))
-	.filter((post) => !post.data.draft)
+	.filter((post) => !post.data.draft && new Date(post.data.date) <= new Date())
 	.sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
 	.slice(0, 6);
 ---
@@ -26,7 +26,7 @@ const posts = (await getCollection('posts'))
 				<ul class="list-none text-sm">
 					{headings
 						.filter((heading) => heading.depth === 2 || heading.depth === 3)
-						.map((heading) => (
+						.flatMap((heading) => (
 							<li class="py-1">
 								<a href={`#${heading.slug}`} class="hover:underline">
 									<span class={heading.depth === 2 ? 'text-brand-crimson' : 'text-brand-wave'}>#</span>
@@ -44,7 +44,7 @@ const posts = (await getCollection('posts'))
 			<div class="my-6 hidden xl:block">
 				<h2 class="mb-4 text-center font-bold uppercase text-white">Полезные ссылки</h2>
 				<ul class="list-disc text-sm">
-					{links.map((link) => (
+					{links.flatMap((link) => (
 						<li class="py-1">
 							<a href={link.href}>{link.label}</a>
 						</li>
@@ -59,7 +59,7 @@ const posts = (await getCollection('posts'))
 
 		<div class="not-prose grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-1">
 			{
-				posts.map((post) => (
+				posts.flatMap((post) => (
 					<a
 						href={`/posts/${post.slug}`}
 						class="group mb-1 flex flex-col gap-1 rounded-md bg-brand-mist p-2 ring-2 ring-transparent hover:ring-brand-gold"
@@ -90,7 +90,7 @@ const posts = (await getCollection('posts'))
 		<h2 class="mb-4 text-center font-bold uppercase text-white">Наши друзья</h2>
 		<ul class="list-disc">
 			{
-				SITE_FRIENDS.map((friend) => (
+				SITE_FRIENDS.flatMap((friend) => (
 					<li class="flex items-center py-1 hover:text-brand-wave hover:underline">
 						<img src={friend.favicon} class="mr-2 h-6 w-6" />
 						<a href={friend.href} target="_blank">
