--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,6 +2,8 @@
 import '@fontsource-variable/inter';
 import '@fontsource-variable/lora';
 
+import {ViewTransitions} from 'astro:transitions';
+
 import BaseHead from '~components/BaseHead.astro';
 import Footer from '~components/Footer.astro';
 import Header from '~components/Header.astro';
@@ -18,6 +20,7 @@ const { title, description, headings, sidebar = true, links } = Astro.props;
 <html lang="ru" class="h-full min-h-full bg-brand-night text-brand-ivory">
 	<head>
 		<BaseHead title={title} description={description} />
+		<ViewTransitions />
 	</head>
 
 	<body class="mx-auto flex h-full min-h-full w-full max-w-7xl flex-col sm:px-6 lg:px-8">
