--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,15 +1,15 @@
 ---
-import { CollectionEntry, getCollection } from 'astro:content';
+import { type CollectionEntry, getCollection } from 'astro:content';
 import BaseLayout from '~layouts/BaseLayout.astro';
 import PostCard from '~components/PostCard.astro';
 
 export async function getStaticPaths() {
 	const allPosts = await getCollection('posts');
-	const uniqueTags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
+	const uniqueTags = [...new Set(allPosts.flatMap((post) => post.data.tags))];
 
-	return uniqueTags.map((tag) => {
+	return uniqueTags.flatMap((tag) => {
 		const filteredPosts = allPosts
-			.filter((post) => post.data.tags.includes(tag) && !post.data.draft)
+			.filter((post) => post.data.tags.includes(tag) && !post.data.draft && new Date(post.data.date) <= new Date())
 			.sort((a, b) => new Date(b.data.date) - new Date(a.data.date));
 
 		return {
@@ -33,7 +33,7 @@ const description = `Статьи с тэгом «${tag}»`;
 		</div>
 
 		<div class="mt-12 flex flex-col">
-			{posts.map((post: CollectionEntry<'posts'>) => <PostCard post={post} />)}
+			{posts.flatMap((post: CollectionEntry<'posts'>) => <PostCard post={post} />)}
 		</div>
 	</div>
 </BaseLayout>
