--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ import HeaderLink from '~components/HeaderLink.astro';
 import Socials from '~components/Socials.astro';
 import { SITE_NAVIGATION, SITE_TITLE } from '../consts';
 ---
-
+<meta name="google-site-verification" content="LSeuVDW68_g3k-l9Y1RsmQH3XjR5TZ_Vg3t9ifvaayE" />
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ND6YW3GY5W"></script>
 <script>
