--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -12,6 +12,8 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const { title, description = SITE_DESCRIPTION } = Astro.props;
 ---
 
+<meta name="google-site-verification" content="LSeuVDW68_g3k-l9Y1RsmQH3XjR5TZ_Vg3t9ifvaayE" />
+
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
